force-app/main/default/objects/GWB_Productivity_Idea__c/GWB_Productivity_Idea__c.object-meta.xml
<CustomObject>
    <label>Productivity Idea</label>
    <nameField>
        <label>Idea Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productivity Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>