force-app/main/default/objects/GWB_Productivity_Idea__c/fields/AI_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Generated</label>
    <type>Checkbox</type>
</CustomField>