force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>