force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Benchmark_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Evidence__c</fullName>
    <label>Benchmark Evidence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>