force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Dollar_Impact__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Impact__c</fullName>
    <label>Dollar Impact</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>