force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Edge_Signal__c.field-meta.xml
<CustomField>
    <fullName>Edge_Signal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edge Signal</label>
    <referenceTo>GWB_Edge_Signal__c</referenceTo>
    <relationshipLabel>Productivity Ideas</relationshipLabel>
    <relationshipName>Productivity_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>