force-app/main/default/objects/GWB_Productivity_Idea__c/fields/FTE_Impact__c.field-meta.xml
<CustomField>
    <fullName>FTE_Impact__c</fullName>
    <label>FTE Impact</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>