force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Idea_Library__c.field-meta.xml
<CustomField>
    <fullName>Idea_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea Library</label>
    <referenceTo>GWB_Idea_Library__c</referenceTo>
    <relationshipLabel>Productivity Ideas</relationshipLabel>
    <relationshipName>Productivity_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>