force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Idea_Type__c.field-meta.xml
<CustomField>
    <fullName>Idea_Type__c</fullName>
    <label>Idea Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
                <default>true</default>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>