force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Plant_Function__c.field-meta.xml
<CustomField>
    <fullName>Plant_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Function</label>
    <referenceTo>GWB_Plant_Function__c</referenceTo>
    <relationshipLabel>Productivity Ideas</relationshipLabel>
    <relationshipName>Productivity_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>