force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Required_Validations__c.field-meta.xml
<CustomField>
    <fullName>Required_Validations__c</fullName>
    <label>Required Validations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>