force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Notes__c</fullName>
    <label>Risk Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>