force-app/main/default/objects/GWB_Productivity_Idea__c/fields/Slack_Message_TS__c.field-meta.xml
<CustomField>
    <fullName>Slack_Message_TS__c</fullName>
    <label>Slack Message TS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>