force-app/main/default/objects/GWB_Productivity_Idea__c/validationRules/Temporary_Requires_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Temporary_Requires_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Idea_Type__c, &quot;Temporary&quot;), OR(ISBLANK(Start_Date__c), ISBLANK(End_Date__c)))</errorConditionFormula>
    <errorMessage>Temporary initiatives require both a Start Date and End Date.</errorMessage>
</ValidationRule>